--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body class="fondo">
+    <div class="suelo"> </div>
+    <div class="postev"> </div>
+    <div class="posted"> </div>
+    <div class="tablero"> </div>
+    <div class="aro"> </div>
+  </body>
+</html>
