--- a/index.html
+++ b/index.html
@@ -2,14 +2,30 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Jugador basquet</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="fondo">
     <div class="suelo"> </div>
-    <div class="postev"> </div>
-    <div class="posted"> </div>
-    <div class="tablero"> </div>
-    <div class="aro"> </div>
+  <div class="canasta">
+      <div class="postev"> </div>
+      <div class="posted"> </div>
+      <div class="tablero"> </div>
+      <div class="aro"> </div>
+      <div class="soporte_aro"> </div>
+      <div class="red"> </div>
+  </div>
+
+
+  <div class="Jugador">
+      <div class="piernas">
+          <div class="pierna1"></div>
+          <div class="pie1"></div>
+          <div class="calcetin">
+            <div class="logo"></div>
+          </div>
+          <div class="pantaloniz"></div>
+      </div>
+  </div>
   </body>
 </html>
