--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Jugador basquet</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body class="fondo">
     <div class="suelo"> </div>
   <div class="canasta">
@@ -18,14 +19,27 @@
 
 
   <div class="Jugador">
-      <div class="piernas">
-          <div class="pierna1"></div>
+        <div class="pierna pizquierda">
+          <div class="muslo"></div>
           <div class="pie1"></div>
           <div class="calcetin">
             <div class="logo"></div>
           </div>
-          <div class="pantaloniz"></div>
-      </div>
+          <div class="pantalon"></div>
+        </div>
+        <div class="pierna  pderecha">
+            <div class="muslo"></div>
+            <div class="pie1"></div>
+            <div class="calcetin">
+              <div class="logo"></div>
+            </div>
+            <div class="pantalon"></div>
+        </div>
+        <div class="cuerpo">
+          <div class="camiseta"></div>
+
+        </div>
   </div>
+
   </body>
 </html>
