--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           <div class="calcetin">
             <div class="logo"></div>
           </div>
-          <div class="pantalon"></div>
+          <div class="pantalon">
+            <div class="cintapant"></div>
+          </div>
         </div>
         <div class="pierna  pderecha">
             <div class="muslo"></div>
@@ -33,11 +35,16 @@
             <div class="calcetin">
               <div class="logo"></div>
             </div>
-            <div class="pantalon"></div>
+            <div class="pantalon">
+              <div class="cintapant"></div>
+            </div>
         </div>
         <div class="cuerpo">
-          <div class="camiseta"></div>
+          <div class="camiseta">
+            <div class="texto-camiseta">23</div>
+          </div>
 
+          <div class="pecho"></div>
         </div>
   </div>
 
