--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
   <div class="Jugador">
+
         <div class="pierna pizquierda">
           <div class="muslo"></div>
           <div class="pie1"></div>
@@ -45,6 +46,38 @@
           </div>
 
           <div class="pecho"></div>
+
+          <div class="caonjunto_cabeza">
+
+            <div class="cabeza">
+              <div class="boca">
+                <div class="linea_boca"></div>
+                </div>
+              <div class="zona_ojos">
+                <div class="ojo_iz">
+                  <div class="pupila">
+                    <div class="negro"></div>
+                  </div>
+                </div>
+                  <div class="ojo_der">
+                    <div class="pupila">
+                      <div class="negro"></div>
+                    </div>
+                  </div>
+              <div class="cejas">
+                <div class="ceja_iz"></div>
+                <div class="ceja_de"></div>
+              </div>
+
+              </div>
+              <div class="nariz"></div>
+              <div class="cinta"></div>
+
+              <div class="pelo"></div>
+              </div>
+
+              </div>
+              <div class="cuello"></div>
         </div>
   </div>
 
