--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
 
               </div>
               <div class="cuello"></div>
+
+
+                <div class="pelota"></div>
+              <div class="brazo_iz"></div>
+              <div class="brazo_dr"></div>
+            
+
+              </div>
         </div>
   </div>
 
